2009-06-25 14:29 +0200  Rocco Rutte  <pdmef@gmx.net>  (bd0828adede8)

	* compose.c: Treat messages written with <write-fcc> as fcc, not
	postponed.

2009-06-23 10:13 -0700  Vincent Lefevre  <vincent@vinc17.org>  (bc2463863c15)

	* ChangeLog, po/fr.po: Updated French translation.

2009-06-23 16:56 +0200  Rocco Rutte  <pdmef@gmx.net>  (d152033cf967)

	* doc/manual.xml.head: Manual: Simply type conversion section wording.

	* Makefile.am, configure.ac: Don't build hcversion.h and mutt_md5
	without hcache

	* handler.c, mutt.h, muttlib.c: Implement state_putws() and
	state_putwc(), see #3148.

	This is needed to unbreak text/enriched rendering on Linux.

	* commands.c: Only use keypad() when curses is running

2009-06-23 00:28 -0700  Vincent Lefevre  <vincent@vinc17.org>  (642987450d83)

	* curs_lib.c: Only beep when displaying error messages (unbreaks
	[54bc1ef602e7])

2009-06-23 00:20 -0700  Brendan Cully  <brendan@kublai.com>  (f5849c72a274)

	* crypt-gpgme.c: Update crypt-gpgme for mutt_mktemp change
	in [ed7eb5de7536]

2009-06-22 17:36 +0200  Rocco Rutte  <pdmef@gmx.net>  (54bc1ef602e7)

	* curs_lib.c: Make mutt_curses_(error|message) format message to COLS
	chars. Closes #3278.

	While I'm at it, fold both functions into one.

2009-06-22 17:21 +0200  Alexey Tourbin  <at@altlinux.org>  (e378bbdc3f0f)

	* smime_keys.pl: smime_keys: use Time::Local module. Closes #3277.

2009-06-22 17:17 +0200  Rocco Rutte  <pdmef@gmx.net>  (4899f140ec25)

	* mbyte.c: Fix included iswupper(). Closes #3276.

	* lib.c: Catch range errors when converting to long.

2009-06-21 21:57 +0200  Rocco Rutte  <pdmef@gmx.net>  (ed7eb5de7536)

	* attach.c, commands.c, crypt.c, editmsg.c, handler.c, headers.c,
	help.c, history.c, imap/message.c, main.c, mbox.c, muttlib.c, mx.c,
	pattern.c, pgp.c, pgpkey.c, pgpmicalg.c, pop.c, protos.h,
	recvattach.c, recvcmd.c, rfc3676.c, send.c, sendlib.c, smime.c: Pass
	buffer size to mutt_mktemp()

	* handler.c, rfc3676.c: Port f=f and text/plain handlers to